Native/Test/KL/error.out
error.kl:8:3: error: syntax error, unexpected integer constant, expecting ;
