Native/Test/KL/error.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

operator entry()
{
  9
  7 + foo;
}
